[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/godot_icon.png" type="Texture" id=1]
[ext_resource path="res://prefabs/entities/tile/tile.gd" type="Script" id=2]

[node name="Tile" type="Spatial"]
script = ExtResource( 2 )
icon = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_layer = 4
collision_mask = 124

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
depth = 0.1
polygon = PoolVector2Array( 0, 0 )

[node name="TileOverlayContainer" type="Spatial" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_body_exited"]
[connection signal="input_event" from="Area" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_mouse_exited"]
